Fix spacing and font aesthetics

--- a/styles.css
+++ b/styles.css
@@ -408,7 +408,7 @@ input {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   padding: 2.5rem 0;
   margin: 0 8%;
   gap: 2rem;
@@ -515,6 +515,7 @@ input {
 
 .weight-container > .weight-label {
   margin: 0.75rem;
+  margin-bottom: 0rem;
 }
 
 .weight-controls {
@@ -829,7 +830,7 @@ input {
 .mainTutorial {
   background-color: var(--white);
   color: var(--darkblue);
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
